# CppVue

./: .gitignore  CMakeLists.txt  README.md
examples/todo/: App.cvue  CMakeLists.txt  index.html  main.cpp
examples/todo/components/: TodoItem.cvue
examples/todo/store/: todo_store.hpp
src/compiler/: build_tool.cpp  build_tool.hpp  cvue_compiler.cpp  cvue_compiler.hpp  template_parser.cpp  template_parser.hpp  vue_compiler.hpp
src/core/: component.cpp  component.hpp  composable.hpp  directives.cpp  directives.hpp  expression.cpp  expression.hpp  lifecycle.hpp  plugin.hpp  reactive.cpp  reactive.hpp  renderer.cpp  renderer.hpp  router.cpp  router.hpp  store.cpp  store.hpp  template.hpp
src/cppvue/: app.hpp
src/wasm/: wasm_bridge.cpp  wasm_bridge.hpp
vscode-cppvue/: README.md  language-configuration.json  package.json
vscode-cppvue/syntaxes/: cvue.tmLanguage.json
